# bo4e-rust

./: .claude-orchestrator.toml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  drift.yml  (+1 more)
crates/bo4e/: Cargo.toml
crates/bo4e-core/: Cargo.toml
crates/bo4e-core/src/: additional_attribute.rs  lib.rs  traits.rs
crates/bo4e-core/src/bo/: balancing.rs  bundle_contract.rs  business_partner.rs  concession_fee_price_sheet.rs  contract.rs  controllable_resource.rs  costs.rs  device.rs  energy_amount.rs  external_costs.rs  hardware_price_sheet.rs  invoice.rs  load_profile.rs  location_assignment.rs  location_properties.rs  market_location.rs  market_participant.rs  meter.rs  metering_location.rs  metering_price_sheet.rs  mod.rs  network_location.rs  network_usage_price_sheet.rs  offer.rs  person.rs  price_sheet.rs  region.rs  regional_tariff.rs  service_price_sheet.rs  tariff.rs  tariff_costs.rs  tariff_info.rs  tariff_price_sheet.rs  technical_resource.rs  tender.rs  time_series.rs
crates/bo4e-core/src/com/: address.rs  aggregated_value.rs  amount.rs  billing_period_data.rs  bonus.rs  cadastral_address.rs  concession_fee.rs  consumed_quantity.rs  consumption.rs  contact_method.rs  contract_conditions.rs  contract_part.rs  cost_block.rs  cost_position.rs  date_range.rs  discount.rs  energy_mix.rs  energy_source.rs  external_cost_block.rs  external_cost_position.rs  external_reference.rs  geo_coordinates.rs  hardware.rs  interval.rs  invoice_position.rs  levy.rs  load_curve_data.rs  load_profile_value.rs  margin_price.rs  measured_value.rs  meter_reading.rs  meter_register.rs  metering_point_status.rs  mod.rs  network_charge.rs  offer_part.rs  offer_position.rs  offer_variant.rs  position_surcharge.rs  price.rs  (+25 more)
crates/bo4e-core/src/enums/: area_type.rs  arithmetic_operation.rs  bo_type.rs  business_partner_role.rs  calculation_formula.rs  calculation_method.rs  com_type.rs  concession_fee_customer_group.rs  concession_fee_type.rs  contact_type.rs  contract_form.rs  contract_status.rs  contract_type.rs  controllable_resource_type.rs  cost_class.rs  country.rs  currency.rs  customer_group.rs  customer_type.rs  device_category.rs  device_type.rs  division.rs  eco_certificate.rs  eco_label.rs  energy_direction.rs  generation_type.rs  invoice_status.rs  invoice_type.rs  location_type.rs  market_role.rs  measured_quantity.rs  measured_value_status.rs  measurement_price_type.rs  measurement_type.rs  medium.rs  meter_category.rs  meter_size.rs  meter_type.rs  mod.rs  network_level.rs  (+34 more)
crates/bo4e-serde/: Cargo.toml
crates/bo4e-serde/benches/: json_parsing.rs
crates/bo4e-serde/src/: config.rs  lib.rs  mapping.rs  serialize.rs  simd.rs
crates/bo4e/examples/: market_location.rs  meter_roundtrip.rs
crates/bo4e/src/: lib.rs
crates/bo4e/tests/: golden.rs
crates/bo4e/tests/golden/: generate.py
crates/bo4e/tests/golden/fixtures/: business_partner.json  market_location.json  meter.json
docs/: BENCHMARKS.md
schemas/: .gitignore
scripts/: compare_schemas.py  extract_python_schema.py  requirements.txt
(+35 files in other folders)
