[workspace]
resolver = "2"
members = [
    "crates/bo4e-core",
    "crates/bo4e-serde",
    "crates/bo4e",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/hochfrequenz/bo4e-rust"
authors = ["Hochfrequenz Unternehmensberatung GmbH"]
keywords = ["bo4e", "energy", "edi", "bdew"]
categories = ["data-structures", "encoding"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
simd-json = "0.14"

# Testing
proptest = "1.4"
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
bo4e-core = { path = "crates/bo4e-core", version = "0.1.1" }
bo4e-serde = { path = "crates/bo4e-serde", version = "0.1.1" }
