[package]
name = "bo4e-core"
description = "Core types for BO4E (Business Objects for Energy)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
