[package]
name = "bo4e-core"
description = "Core types for BO4E (Business Objects for Energy)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
schemars = { version = "0.8", optional = true, features = ["chrono"] }
serde_json = { workspace = true, optional = true }

[features]
default = []
json-schema = ["schemars", "serde_json"]

[dev-dependencies]
serde_json = { workspace = true }
