[package]
name = "bo4e-serde"
description = "High-performance serialization for BO4E types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bo4e-core = { workspace = true }
serde = { workspace = true }
simd-json = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "json_parsing"
harness = false
